--- a/JewelleryShop/pom.xml
+++ b/JewelleryShop/pom.xml
@@ -13,13 +13,12 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-      </dependency>
+</dependency>
       <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-webmvc</artifactId>
     <version>4.3.3.RELEASE</version>
 </dependency>
-
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-context</artifactId>
@@ -42,8 +41,14 @@
     <artifactId>jstl</artifactId>
     <version>1.2</version>
 </dependency>
-      
-    </dependency>
+
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>4.0.0-b01</version>
+</dependency>
+
+
   </dependencies>
   <build>
     <finalName>JewelleryShop</finalName>
