--- a/JewelleryShop/src/main/webapp/WEB-INF/web.xml
+++ b/JewelleryShop/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
   <display-name>Archetype Created Web Application</display-name>
     <context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/application-context.xml</param-value>
+		<param-value>/WEB-INF/application-context.xml, /WEB-INF/springsecurity-servlet.xml</param-value>
 	</context-param>
 	
 	<listener>
