--- a/JewelleryShop/src/main/webapp/WEB-INF/web.xml
+++ b/JewelleryShop/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,9 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
     <context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/application-context.xml, /WEB-INF/springsecurity-servlet.xml</param-value>
 	</context-param>
-	
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -25,5 +20,13 @@
         
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-  
-</web-app>
+ 
+  <filter>
+  <filter-name>springSecurityFilterChain</filter-name>
+  <filter-class> org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+ </filter>
+ <filter-mapping>
+  <filter-name>springSecurityFilterChain</filter-name>
+  <url-pattern>/*</url-pattern>
+ </filter-mapping>
+  </web-app>
